# Wip3

./: .gitignore  Array.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Input.cpp  Input.h  Options.cpp  Options.h  Profile.h  Profile.ih  README.md  SceneOpenGL.cpp  SceneOpenGL.h  Shader.cpp  Shader.h  Ship.cpp  Ship.h  Texture.cpp  Texture.h  Track.cpp  Track.h  Wip3.cbp  Wip3.depend  Wip3.layout  common.cpp  common.h  config_sample.ini  main.cpp
Models/: ship.blend
Shaders/: background.frag  background.vert  map.frag  map.vert  texture.frag  track.frag
